fix(navbar): fix responsiveness on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ html{
   font-style: bold;
   font-variation-settings:
     "wdth" 100;
-  font-size: 2.5rem;  
   letter-spacing: -2px;
 }
 .active-navlink {
